Renew Syntax and drop trash

--- a/Data prerocessing.ipynb
+++ b/Data prerocessing.ipynb
@@ -1742,6 +1742,77 @@
     "    \n",
     "writer.save()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cоздание матриц корреспонденции между коммунами"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets_list = os.listdir('translated_data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs('analysis/correspondence_matricies/full')\n",
+    "os.makedirs('analysis/correspondence_matricies/consumer')\n",
+    "os.makedirs('analysis/correspondence_matricies/other')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "motivation_filter = ['Покупки', 'Услуги', 'Туризм и рекреация', 'Другие виды досуга']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mtopn\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3057: DtypeWarning: Columns (7,13,18,25,30,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset in datasets_list:\n",
+    "    year = dataset.split('_')[1].split('.')[0]\n",
+    "    df_current = pd.read_csv(f'translated_data/{dataset}')\n",
+    "    df_current = df_current[df_current.geo_departure != df_current.geo_arrival]\n",
+    "        \n",
+    "    correspondence = pd.pivot_table(df_current, 'uid_person', index = 'geo_departure', columns = 'geo_arrival', aggfunc = 'nunique')\n",
+    "    correspondence.fillna('').to_html(f'analysis/correspondence_matricies/full/corresp_full_{year}.html')\n",
+    "    correspondence.to_csv(f'analysis/correspondence_matricies/full/corresp_full_{year}.csv')\n",
+    "    \n",
+    "    shopping_and_services = df_current[df_current.motiv_motivation.isin(motivation_filter)]\n",
+    "    correspondence = pd.pivot_table(shopping_and_services, 'uid_person', index = 'geo_departure', columns = 'geo_arrival', aggfunc = 'nunique')\n",
+    "    correspondence.fillna('').to_html(f'analysis/correspondence_matricies/consumer/corresp_consumer_{year}.html')\n",
+    "    correspondence.to_csv(f'analysis/correspondence_matricies/consumer/corresp_consumer_{year}.csv')\n",
+    "    \n",
+    "    shopping_and_services = df_current[~df_current.motiv_motivation.isin(motivation_filter)]\n",
+    "    correspondence = pd.pivot_table(shopping_and_services, 'uid_person', index = 'geo_departure', columns = 'geo_arrival', aggfunc = 'nunique')\n",
+    "    correspondence.fillna('').to_html(f'analysis/correspondence_matricies/other/corresp_other_{year}.html')\n",
+    "    correspondence.to_csv(f'analysis/correspondence_matricies/other/corresp_other_{year}.csv')"
+   ]
   }
  ],
  "metadata": {
