--- a/Centralities Computation.ipynb
+++ b/Centralities Computation.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,55 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def count_trips(current_data):\n",
-    "    edges = defaultdict(dict)\n",
-    "    indexes = current_data.index.to_flat_index()\n",
-    "    for pair in tqdm(combo(all_names, 2)):\n",
-    "        pair_r = pair[::-1]\n",
-    "        if (pair in indexes) or (pair_r in indexes):\n",
-    "            flow = current_data.loc[pair] + current_data.loc[pair[::-1]]\n",
-    "            edges[(pair[0],pair[1])] = flow\n",
-    "    edge_list = pd.DataFrame(edges, index = ['flow']).transpose().dropna()\n",
-    "    edge_list.index.set_names(['local_1', 'local_2'], inplace = True)\n",
-    "    edge_list.index.set_names(['local_1', 'local_2'], inplace = True)\n",
-    "    edge_list.reset_index(inplace = True)\n",
-    "    return edge_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def count_trips(current_data):\n",
-    "    edges = defaultdict(dict)\n",
-    "    indexes = current_data.index.to_flat_index()\n",
-    "    for pair in tqdm(combo(all_names, 2)):\n",
-    "        try:\n",
-    "            f1 = current_data.loc[pair]\n",
-    "        except:\n",
-    "            f1 = 0\n",
-    "        try:\n",
-    "            f2 = current_data.loc[pair[::-1]]\n",
-    "        except:\n",
-    "            f2 = 0\n",
-    "        flow = f1 + f2\n",
-    "        edges[(pair[0],pair[1])] = flow\n",
-    "    edge_list = pd.DataFrame(edges, index = ['flow']).transpose().dropna()\n",
-    "    edge_list.index.set_names(['local_1', 'local_2'], inplace = True)\n",
-    "    edge_list.index.set_names(['local_1', 'local_2'], inplace = True)\n",
-    "    edge_list.reset_index(inplace = True)\n",
-    "    return edge_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,25 +248,28 @@
     "    edge_list = compute_metrics(total_system)\n",
     "    \n",
     "    graph = nx.from_pandas_edgelist(edge_list, 'local_1', 'local_2', ['flow', 'flow_weighted'])\n",
-    "    edge_centrality = centrality_edges(graph)\n",
+    "#     edge_centrality = centrality_edges(graph)\n",
     "    node_centrality = centrality_nodes(graph).assign(\n",
     "        lat = lambda frame: frame.commune.map(coordinates_map).str['lat'],\n",
     "        lon = lambda frame: frame.commune.map(coordinates_map).str['lon']\n",
     "    )\n",
-    "    edge_list = edge_list.merge(edge_centrality, on = ['local_1', 'local_2'])\n",
+    "#     edge_list = edge_list.merge(edge_centrality, on = ['local_1', 'local_2'])\n",
     "    \n",
-    "#     os.makedirs(f'analysis/yearly_graphs/{tp}/')\n",
-    "    get_geoLines(edge_list).to_file(\n",
-    "        f'analysis/yearly_graphs/{tp}/edges_{year}.gpkg', driver = 'GPKG'\n",
-    "    )\n",
-    "    get_geoPoints(node_centrality).to_file(\n",
-    "        f'analysis/yearly_graphs/{tp}/nodes_{year}.gpkg', driver = 'GPKG'\n",
-    "    )"
+    "#     os.makedirs(f'analysis/yearly_graphs_v2/{tp}/')\n",
+    "    \n",
+    "#     edge_list.to_csv(f'analysis/yearly_graphs_v2/{tp}/edges_{tp}_{year}.csv', index = None)\n",
+    "    node_centrality.to_csv(f'analysis/yearly_graphs_v2/{tp}/nodes_{tp}_{year}.csv', index = None)\n",
+    "#     get_geoLines(edge_list).to_file(\n",
+    "#         f'analysis/yearly_graphs_v2/{tp}/edges_{tp}_{year}.gpkg', driver = 'GPKG'\n",
+    "#     )\n",
+    "#     get_geoPoints(node_centrality).to_file(\n",
+    "#         f'analysis/yearly_graphs_v2/{tp}/nodes_{tp}_{year}.gpkg', driver = 'GPKG'\n",
+    "#     )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +277,13 @@
     "    for tp in ['total', 'commuters', 'consumers', 'others']:\n",
     "        perform_fuctions(year, tp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
